[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/macro128/pdm-conda"
Changelog = "https://github.com/macro128/pdm-conda/blob/main/CHANGELOG.md"

[project.entry-points.pdm]
conda = "pdm_conda:main"

[project]
name = "pdm-conda"
description = "A PDM plugin to resolve/install/uninstall project dependencies with Conda"
requires-python = "~=3.10.0"
authors = [
    { name = "Marcos Pastorini" },
]
keywords = ["pdm", "plugin", "conda"]
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pdm~=2.10.0",
    "requests~=2.31.0",
    "typing-extensions>=4.7.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest~=7.4.3",
    "pytest-mock~=3.11.1",
    "pytest-cov~=4.1.0",
    "pytest-random-num~=1.0.13",
    "responses~=0.23.3",
]

[tool.pdm]
plugins = [
    "pdm-backend",
]

[tool.pdm.version]
source = "file"
path = "src/pdm_conda/__init__.py"

[tool.pdm.build]
package-dir = "src"
includes = ["src", "data/*.json"]
excludes = ["tests"]

[tool.pdm.scripts]
test = "pytest --cov=src/ tests/{args} --cov-report xml --cov-report term"
fix-report = "python scripts/fix_report.py"
test-cov = { composite = ["test {args}", "fix-report"] }

[tool.pytest.ini_options]
addopts = "--random-order"
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning"
]

[tool.mypy]
python_version = "3.10"
pretty = true

[tool.isort]
honor_noqa = true
profile = "black"
combine_star = true
remove_redundant_aliases = true
multi_line_output = 3

[tool.black]
line-length = 120

[tool.flake8]
inline-quotes = "double"
max-line-length = 120
extend-ignore = [
    # black
    "E203", "W503",
    # Too broad except
    "E722",
    # Missing docstring in __init__
    "D107",
    # Found `__init__.py` module with logic
    "WPS412", "WPS326",
]

per-file-ignores = [
    # all init files
    "__init__.py:",
    # ignore not used imports
    "F401",
    # ignore import with wildcard
    "F403",
    # Found wrong metadata variable
    "WPS410",
    # all tests
    "test_*.py,tests.py,tests_*.py,*/tests/*,conftest.py:",
    # Use of assert detected
    "S101",
    # Found outer scope names shadowing
    "WPS442",
    # Found too many local variables
    "WPS210",
    # Found magic number
    "WPS432",
    # Missing parameter(s) in Docstring
    "DAR101",
    # Found too many arguments
    "WPS211",
]

exclude = [
    "./.git",
    "./venv",
    "migrations",
    "./var",
]
